<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.filippocasa.myapplicationactionbar.activity.AccessLogActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_large_material"
        android:text="@string/username_label"
        android:id="@+id/user_label_login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/user_label_login"
        android:textSize="@dimen/abc_text_size_large_material"
        android:id="@+id/login_username"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_username"
        android:textSize="@dimen/abc_text_size_large_material"
        android:text="@string/password_label"
        android:id="@+id/pass_label_login"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/abc_text_size_large_material"
        android:layout_below="@+id/pass_label_login"
        android:id="@+id/login_password"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_access_label"
        android:id="@+id/login_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="doLogin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/error_cred"
        android:id="@+id/error_label_login"
        android:layout_below="@+id/login_password"
        android:layout_centerHorizontal="true"
        android:textColor="@color/red"
        android:visibility="invisible"/>


</RelativeLayout>
