<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.filippocasa.myapplicationactionbar.activity.ChoiseProductActivity">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/lay1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_condimenti"
            android:src="@drawable/condimenti"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/image_ricette"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_ricette"
            android:src="@drawable/ricette"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/condimneti"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/image_condimenti"
            android:background="@color/white"
            android:layout_alignEnd="@+id/image_condimenti" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ricette"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/image_ricette"
            android:background="@color/white"
            android:layout_alignStart="@+id/image_ricette" />
    </RelativeLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lay1"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:id="@+id/lay2">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_tartufo"
            android:src="@drawable/tartufo"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/image_salse"
            android:layout_marginEnd="10dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/image_salse"
            android:src="@drawable/salse"
            android:layout_weight="1"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/tartufo"
            android:id="@+id/textView8"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/image_tartufo"
            android:background="@color/white"
            android:layout_alignEnd="@+id/image_tartufo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/salse"
            android:id="@+id/textView9"
            android:background="@color/white"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/image_salse"
            android:layout_alignStart="@+id/image_salse" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout4">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_edit"
            android:id="@+id/button_modifica_profilo" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carrello"
            android:id="@+id/button_carrello"
            android:onClick="goToCharr"/>

    </LinearLayout>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_above="@+id/linearLayout4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="39dp"/>

</RelativeLayout>
